вывод правил без повтора